# os_tasks

./: .gitignore  CMakeLists.txt  README.md  background_prog.c  background_prog.h  main.c  prov.md  test.bat  test_background_prog.c
lab1/: test.bat
lab2/: CMakeLists.txt  bg_proc.c  bg_proc.h  test_bg_proc.c
lab3/: CMakeLists.txt  counter.c  counter.h  test_counter.c
lab4/: CMakeLists.txt  logger.c  logger.h  test_logger.c  usb_port.c
lab5/: CMakeLists.txt  database.c  database.h  http_server.c  http_server.h  logger.c  logger.h  test_http_server.c  usb_port.c  usb_port.h
